# RTNeuron

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .gitsubprojects  AUTHORS.txt  CMakeLists.txt  DockerfileAppImage  GNUmakefile  LICENSE.txt  README  README.md
doc/: CMakeLists.txt  advanced.dox  api_overview.dox  basics.dox  command_line_options.py  compilation.dox  compilation.dox.in  custom.css  description  doxygen.cfg.in  doxygen.css  environmental_variables_table.py  lod_images.py  main_page.dox  main_page.dox.in  reference_manual.dox.in  release_notes.py.in  showcase_june_2013.odp  user_guide.dox  user_guide.dox.in
doc/class_diagram/: classes.java  generate.sh
doc/python/: CMakeLists.txt  api.rst  colorings_and_modes.rst  conf.py.in  example.py  gallery.rst  getting_started.rst  index.rst  meshes_and_models.rst  simulation_playback.rst  synaptic_afferent_projections.rst
doc/python/simulation_playback_files/: simulation_playback_11_0.text  simulation_playback_13_0.text  simulation_playback_15_0.text  simulation_playback_1_0.text  simulation_playback_3_0.text  simulation_playback_5_0.text  simulation_playback_9_0.text
doc/release_notes/: 1.1.0  1.2.0  1.2.1  1.3.0  2.0.0  2.1.0  2.1.1  2.10.0  2.11.0  2.12.0  2.13.0  2.2.0  2.3.0  2.4.0  2.5.0  2.6.0  2.7.0  2.8.0  2.9.0  3.0.0  master  template
rtneuron/python/: CMakeLists.txt
rtneuron/python/binding/: AttributeMap.cpp  CMakeLists.txt  Camera.cpp  CameraManipulators.cpp  ColorMap.cpp  Pointer.cpp  RTNeuron.cpp  RawArray.cpp  RawArray.h  Scene.cpp  SimulationPlayer.cpp  View.cpp  boost_signal_connect_wrapper.h  default_docstrings.cpp  gil.h  helpers.cpp  helpers.h  rtneuron_python.cpp  shared_ptr_deallocation.cpp  submodules.cpp  submodules.h  types.cpp
rtneuron/python/binding/net/: CameraBroker.cpp  RestInterface.cpp  SceneEventBroker.cpp  export.cpp
rtneuron/python/binding/sceneops/: NeuronClipping.cpp  export.cpp
rtneuron/python/rtneuron/: __init__.py.in  nest.py  options.py  path_setup.py.in  shared_ptr_fix.py  vizcluster.py
rtneuron/python/rtneuron/apps/: CircuitViewer.qml  ColorSchemes.qml  ConnectionViewer.qml  Projections.qml  __init__.py  (+4 more)
rtneuron/rtneuron/: AttributeMap.cpp  AttributeMap.h  AttributeMap.ipp  CMakeLists.txt  Camera.cpp  Camera.h  CameraImpl.cpp  CameraImpl.h  CameraManipulator.h  ColorMap.cpp  ColorMap.h  InitData.cpp  InitData.h  RTNeuron.cpp  RTNeuron.h  Scene.cpp  Scene.h  SceneImpl.cpp  SceneImpl.h  SimulationPlayer.h  View.cpp  View.h  ViewImpl.cpp  ViewImpl.h  coreTypes.h  enums.h  files.cmake  types.cpp  types.h
rtneuron/rtneuron/config/: Globals.cpp  Globals.h  constants.h  paths.h  paths.in.cpp
rtneuron/rtneuron/cuda/: CMakeLists.txt  CUDAContext.cpp  CUDAContext.h  cull.cu  cull.h  fragments.cu  fragments.h  geometry_functions.cu  timer.h
rtneuron/rtneuron/data/: CircuitCache.cpp  CircuitCache.h  Neuron.cpp  Neuron.h  NeuronMesh.cpp  NeuronMesh.h  Neurons.cpp  Neurons.h  SimulationDataMapper.cpp  SimulationDataMapper.h  SpikeReport.cpp  SpikeReport.h  loaders.cpp  loaders.h
rtneuron/rtneuron/detail/: Configurable.h  RTNeuronEvent.h  attributeMapTypeRegistration.h
rtneuron/rtneuron/net/: CameraBroker.cpp  CameraBroker.h  DataIStreamArchive.cpp  DataIStreamArchive.h  DataIStreamArchive.ipp  DataOStreamArchive.cpp  DataOStreamArchive.h  DataOStreamArchive.ipp  DataStreamArchive.h  DataStreamArchiveException.h  RestInterface.cpp  RestInterface.h  SceneEventBroker.cpp  SceneEventBroker.h
rtneuron/rtneuron/render/: CameraData.cpp  CameraData.h  ColorMap.cpp  ColorMap.h  ColorMapAtlas.cpp  ColorMapAtlas.h  DepthOfField.cpp  DepthOfField.h  DetailedNeuronModelDrawable.h  DrawElementsPortions.cpp  DrawElementsPortions.h  LODNeuronModelDrawable.cpp  LODNeuronModelDrawable.h  NeuronColoring.cpp  NeuronColoring.h  Noise.cpp  Noise.h  RenderBinManager.cpp  RenderBinManager.h  SceneStyle.cpp  SceneStyle.h  ShallowArray.h  Skeleton.cpp  Skeleton.h  Stats.h  Text.cpp  Text.h  ViewStyle.cpp  ViewStyle.h  ViewStyleData.h  ViewportTile.h  timing.cpp  timing.h
rtneuron/rtneuron/scene/: CircuitScene.cpp  CircuitScene.h  CircuitSceneAttributes.cpp  CircuitSceneAttributes.h  ClientSceneObject.h  CollectSkeletonsVisitor.cpp  CollectSkeletonsVisitor.h  DetailedNeuronModel.cpp  DetailedNeuronModel.h  GeometryObject.cpp  GeometryObject.h  LODNeuronModel.cpp  LODNeuronModel.h  ModelObject.cpp  ModelObject.h  ModelViewInverseUpdate.h  NeuronDisplayControl.cpp  NeuronDisplayControl.h  NeuronModel.cpp  NeuronModel.h  NeuronModelClipping.h  NeuronObject.cpp  NeuronObject.h  PerFrameAttribute.h  PerFrameAttribute.ipp  SceneObject.cpp  SceneObject.h  SceneObjectOperation.h  SceneOperation.h  SceneOperations.cpp  SceneOperations.h  SimulationRenderBuffer.cpp  SimulationRenderBuffer.h  SphereSet.cpp  SphereSet.h  SphericalSomaModel.cpp  SphericalSomaModel.h  SubScene.cpp  SubScene.h  SynapseObject.cpp  (+3 more)
rtneuron/rtneuron/sceneops/: NeuronClipping.cpp  NeuronClipping.h  NeuronClippingImpl.cpp  NeuronClippingImpl.h
rtneuron/rtneuron/ui/: CameraPath.h  CameraPathManipulator.cpp  CameraPathManipulator.h  EventHandler.h  PickEventHandler.cpp  PickEventHandler.h  Pointer.cpp  Pointer.h  TrackballManipulator.cpp  TrackballManipulator.h  VRPNManipulator.cpp  VRPNManipulator.h  WiimotePointer.cpp  WiimotePointer.h
rtneuron/rtneuron/util/: AutoExpandLFVector.h  AutoExpandLFVector.ipp  MurmurHash3.cpp  ObjectCache.h  Spline.cpp  Spline.h  attributeMapHelpers.cpp  attributeMapHelpers.h  cameraToID.cpp  cameraToID.h  doxygen.h  extensions.h  log.h  math.cpp  math.h  net.cpp  net.h  shapes.cpp  shapes.h  strings_array.h  transformString.cpp  transformString.h  triangleClassifiers.cpp  triangleClassifiers.h  vec_to_vec.h
rtneuron/rtneuron/viewer/: GyrationMouse.cpp  GyrationMouse.h  Intersense.cpp  Intersense.h  SnapshotWindow.cpp  SnapshotWindow.h  SpaceMouse.cpp  SpaceMouse.h  StereoAnimationPath.cpp  StereoAnimationPath.h  StereoAnimationPathManipulator.cpp  StereoAnimationPathManipulator.h  VRPNManipulatorDevice.h  VRPNMultiDeviceBase.cpp  VRPNMultiDeviceBase.h  Wiimote.cpp  Wiimote.h
(+351 files in other folders)
